objects/Knowledge__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Administrative_CRM_Support_Administrat16__c</fullName>
        <label>Administrative:CRM Support</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Administrative_CRM_Support_Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Knowledge_Administrative_CRM_Support</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Administrative_CRM_Support_Internal_Co35__c</fullName>
        <label>Internal Confidential Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Administrative_CRM_Support_Owning_Team__c</fullName>
        <label>Owning Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>CRM support</fullName>
                </value>
                <value>
                    <fullName>Inside Sales</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Customer Technical Service</fullName>
                </value>
                <value>
                    <fullName>LMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Administrative_CRM_Support_Private_Inf43__c</fullName>
        <label>Private Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Administrative_CRM_Support_Related_Att48__c</fullName>
        <description>Displays the description for attached files.</description>
        <label>Related Attachment Description 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Administrative_CRM_Support_Related_Att59__c</fullName>
        <description>Displays the description for attached files.</description>
        <label>Related Attachment Description 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Administrative_CRM_Support_Related_Kno10__c</fullName>
        <description>Displays the description for other knowledge articles can be made.</description>
        <label>Related Knowledge Article Description 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Administrative_CRM_Support_Related_Kno13__c</fullName>
        <description>Displays the description for other knowledge articles can be made.</description>
        <label>Related Knowledge Article Description 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Administrative_CRM_Support_Related_Kno29__c</fullName>
        <label>Related Knowledge Article 2</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Administrative_CRM_Support_Related_Net12__c</fullName>
        <description>Displays the description for the particular network location or network file.</description>
        <label>Related Network Location Description 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Administrative_CRM_Support_Related_Net14__c</fullName>
        <description>Displays the description for the particular network location or network file.</description>
        <label>Related Network Location Description 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Administrative_CRM_Support_Related_Net40__c</fullName>
        <description>This link will be used to open up a particular network location or network file.</description>
        <label>Related Network Location 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Administrative_CRM_Support_Related_Web46__c</fullName>
        <description>Displays the description for the particular link in a web browser.</description>
        <label>Link description 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Administrative_CRM_Support_Related_Web47__c</fullName>
        <description>Displays the description for the particular link in a web browser.</description>
        <label>Link description 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Administrative_CRM_Support_Related_web52__c</fullName>
        <description>This link will open up a particular link in a web browser.</description>
        <label>Link 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Administrative_CRM_Support_Review_Cycl28__c</fullName>
        <label>Review Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Bi-Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Administrative_CRM_Support_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Knowledge_Administrative_CRM_Support1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Administrative_Customer_Support_Adminis5__c</fullName>
        <label>Administrative:Customer Support</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Administrative_Customer_Technical_Supp49__c</fullName>
        <label>Administrative:Customer Tech Support</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Administrative_Inbound_Outbound_Sales_36__c</fullName>
        <label>Administrative: Inbound/Outbound Sales</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Administrative_Legal_Managed_Services_26__c</fullName>
        <label>Administrative: Legal Managed Services</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Announcement_Alert__c</fullName>
        <label>Alert</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Article_Classification__c</fullName>
        <label>Article Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>CaseLines</fullName>
                </value>
                <value>
                    <fullName>Corp IP</fullName>
                </value>
                <value>
                    <fullName>Corp Risk</fullName>
                </value>
                <value>
                    <fullName>HighQ</fullName>
                </value>
                <value>
                    <fullName>Tax Proffessional</fullName>
                </value>
                <value>
                    <fullName>UKI</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cause__c</fullName>
        <label>Cause</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ESC_Approval_Status__c</fullName>
        <label>Approval Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Legacy_Article_Number__c</fullName>
        <label>Legacy Article Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Resolution_Issue__c</fullName>
        <label>Issue</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Error_Resolution_Resolution__c</fullName>
        <label>Resolution</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Error_Resolution_Root_Cause__c</fullName>
        <label>Root Cause</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Error_Resolution_Troubleshooting_Tips__c</fullName>
        <label>Troubleshooting Tips</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FAQ_Questions_and_Answers__c</fullName>
        <label>Questions and Answers</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>How_To_Instructions__c</fullName>
        <description>Step-by-Step instructions on how to perform a function.</description>
        <label>Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>How_To_Process__c</fullName>
        <label>Process</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Instruction_Instructions__c</fullName>
        <label>Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Internal_Comments__c</fullName>
        <label>Internal Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Known_Issue_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>News_and_Alerts_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Org_Chart_Business_Name__c</fullName>
        <label>Business Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Chart_Department_Contact__c</fullName>
        <label>Department Contact</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Chart_Department_Name__c</fullName>
        <label>Department Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Chart_Related_web_Content_1__c</fullName>
        <description>This link will open up a particular link in a web browser.</description>
        <label>Related web Content 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Audience__c</fullName>
        <label>Audience</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Policy_Description__c</fullName>
        <label>Policy Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Policy_Policy_Name__c</fullName>
        <label>Policy Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Policy_Owner__c</fullName>
        <label>Policy Owner</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Problem__c</fullName>
        <description>Problem Statement</description>
        <label>Problem</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Process_Audience__c</fullName>
        <label>Audience</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Process_Description__c</fullName>
        <label>Process Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Process_Process_Name__c</fullName>
        <label>Process Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Process_Owner__c</fullName>
        <label>Process Owner</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Product_Information_Product_Descriptio22__c</fullName>
        <label>Product Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Product_Information_Product_Name__c</fullName>
        <label>Product Name</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Product_Information_Selling_Tips__c</fullName>
        <label>Selling Tips</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Products_Affected__c</fullName>
        <label>Products Affected</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Related_Articles__c</fullName>
        <label>Related Articles</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Reviewer_Comments__c</fullName>
        <label>Reviewer Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Scenario__c</fullName>
        <label>Scenario</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <label>Solution</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Tax_Pilot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tax Pilot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Training_Application__c</fullName>
        <label>Application</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Audience__c</fullName>
        <label>Audience</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Platform__c</fullName>
        <label>Platform</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>PC</fullName>
                </value>
                <value>
                    <fullName>Mac</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Synopsis__c</fullName>
        <label>Synopsis</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Training_Topic__c</fullName>
        <label>Topic</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Training_Type_Other__c</fullName>
        <label>Type (Other)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Self-Help Guide</fullName>
                </value>
                <value>
                    <fullName>Quick Reference</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Updates_and_Release_Notes_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Who_To_Contact_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Workaround__c</fullName>
        <label>Workaround</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Knowledge</label>
    <listViews>
        <fullName>Administrative_CRM_Support</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge__kav.Administrative_CRM_Support</value>
        </filters>
        <label>Administrative_CRM_Support</label>
    </listViews>
    <listViews>
        <fullName>Administrative_Customer_Support</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge__kav.Administrative_Customer_Support</value>
        </filters>
        <label>Administrative_Customer_Support</label>
    </listViews>
    <listViews>
        <fullName>Administrative_Customer_Technical_Suppo</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge__kav.Administrative_Customer_Technical_Suppo</value>
        </filters>
        <label>Administrative_Customer_Technical_Suppor</label>
    </listViews>
    <listViews>
        <fullName>Administrative_Inbound_Outbound_Sales</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge__kav.Administrative_Inbound_Outbound_Sales</value>
        </filters>
        <label>Administrative_Inbound_Outbound_Sales</label>
    </listViews>
    <listViews>
        <fullName>Administrative_Legal_Managed_Services</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge__kav.Administrative_Legal_Managed_Services</value>
        </filters>
        <label>Administrative_Legal_Managed_Services</label>
    </listViews>
    <listViews>
        <fullName>Announcement</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge__kav.Announcement</value>
        </filters>
        <label>Announcement</label>
    </listViews>
    <listViews>
        <fullName>Error_Resolution</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge__kav.Error_Resolution</value>
        </filters>
        <label>Error_Resolution</label>
    </listViews>
    <listViews>
        <fullName>FAQ</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <columns>LANGUAGE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge__kav.FAQ</value>
        </filters>
        <label>FAQ</label>
    </listViews>
    <listViews>
        <fullName>How_To</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge__kav.How_To</value>
        </filters>
        <label>How_To</label>
    </listViews>
    <listViews>
        <fullName>Instruction</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge__kav.Instruction</value>
        </filters>
        <label>Instruction</label>
    </listViews>
    <listViews>
        <fullName>Internal</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge__kav.Internal</value>
        </filters>
        <label>Internal</label>
    </listViews>
    <listViews>
        <fullName>Known_Issue</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge__kav.Known_Issue</value>
        </filters>
        <label>Known Issue</label>
    </listViews>
    <listViews>
        <fullName>My_TR_POC</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>RECORDTYPE</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge__kav.FAQ,Knowledge__kav.How_To</value>
        </filters>
        <filters>
            <field>Tax_Pilot__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My TR POC</label>
    </listViews>
    <listViews>
        <fullName>News_Alerts</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge__kav.News_Alerts</value>
        </filters>
        <label>News &amp; Alerts</label>
    </listViews>
    <listViews>
        <fullName>Org_Chart</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge__kav.Org_Chart</value>
        </filters>
        <label>Org_Chart</label>
    </listViews>
    <pluralLabel>Knowledge</pluralLabel>
    <recordTypes>
        <fullName>Administrative_CRM_Support</fullName>
        <active>true</active>
        <label>Administrative_CRM_Support</label>
    </recordTypes>
    <recordTypes>
        <fullName>Administrative_Customer_Support</fullName>
        <active>true</active>
        <label>Administrative_Customer_Support</label>
    </recordTypes>
    <recordTypes>
        <fullName>Administrative_Customer_Technical_Suppo</fullName>
        <active>true</active>
        <label>Administrative_Customer_Technical_Suppo</label>
    </recordTypes>
    <recordTypes>
        <fullName>Administrative_Inbound_Outbound_Sales</fullName>
        <active>true</active>
        <label>Administrative_Inbound_Outbound_Sales</label>
    </recordTypes>
    <recordTypes>
        <fullName>Administrative_Legal_Managed_Services</fullName>
        <active>true</active>
        <label>Administrative_Legal_Managed_Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>Announcement</fullName>
        <active>true</active>
        <label>Announcement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Error_Resolution</fullName>
        <active>true</active>
        <label>Error_Resolution</label>
    </recordTypes>
    <recordTypes>
        <fullName>FAQ</fullName>
        <active>true</active>
        <label>FAQ</label>
    </recordTypes>
    <recordTypes>
        <fullName>How_To</fullName>
        <active>true</active>
        <label>How_To</label>
    </recordTypes>
    <recordTypes>
        <fullName>Instruction</fullName>
        <active>true</active>
        <label>Instruction</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal</fullName>
        <active>true</active>
        <label>Internal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Known_Issue</fullName>
        <active>true</active>
        <label>Known Issue</label>
    </recordTypes>
    <recordTypes>
        <fullName>News_Alerts</fullName>
        <active>true</active>
        <label>News &amp; Alerts</label>
    </recordTypes>
    <recordTypes>
        <fullName>Org_Chart</fullName>
        <active>true</active>
        <label>Org_Chart</label>
    </recordTypes>
    <recordTypes>
        <fullName>Policy</fullName>
        <active>true</active>
        <label>Policy</label>
    </recordTypes>
    <recordTypes>
        <fullName>Process</fullName>
        <active>true</active>
        <label>Process</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Information</fullName>
        <active>true</active>
        <label>Product_Information</label>
    </recordTypes>
    <recordTypes>
        <fullName>Training</fullName>
        <active>true</active>
        <label>Training</label>
    </recordTypes>
    <recordTypes>
        <fullName>Updates_and_Release_Notes</fullName>
        <active>true</active>
        <label>Updates and Release Notes</label>
    </recordTypes>
    <recordTypes>
        <fullName>Who_To_Contact</fullName>
        <active>true</active>
        <label>Who_To_Contact</label>
    </recordTypes>
    <validationRules>
        <fullName>ArticleClassification_Is_Mandatory</fullName>
        <active>true</active>
        <description>Dss-7655</description>
        <errorConditionFormula>AND(ISBLANK(TEXT(Article_Classification__c)), $Profile.Name &lt;&gt; &apos;System Administrator&apos;)</errorConditionFormula>
        <errorMessage>Article Classification is Mandatory</errorMessage>
    </validationRules>
</CustomObject>